--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "readmeFilename": "README.md",
   "devDependencies": {
     "lint": "*",
-    "vows": "*"
+    "vows": "*",
+    "jscoverage": "*"
   }
 }
